--- a/templates/result.html
+++ b/templates/result.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MLRPro - Check Your Resume</title>
+    <title>MLRPro - Result!!</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap/css/bootstrap.min.css') }}">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,400italic">
     <link rel="stylesheet" href="{{ url_for('static', filename='fonts/font-awesome.min.css') }}">
@@ -15,7 +15,7 @@
     <nav class="navbar navbar-default navbar-fixed-top" style="background-color:rgba(248,248,248,0);padding-top:35px">
         <div class="container">
             <div class="navbar-header">
-                <a class="navbar-brand navbar-link" href="#" style="padding-left:69px;"> <img src="{{ url_for('static', filename='img/logo_colored.png') }}" style="width:150px;margin:0px;margin-top:-25px;padding-left:0px;margin-left:-5px;"></a>
+                <a class="navbar-brand navbar-link" href="mlrpro.com" style="padding-left:69px;"> <img src="{{ url_for('static', filename='img/logo_colored.png') }}" style="width:150px;margin:0px;margin-top:-25px;padding-left:0px;margin-left:-5px;"></a>
                 <button class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navcol-1" style="margin-right:29px;background-color: #000000"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
             </div>
             <div class="collapse navbar-collapse" id="navcol-1">
@@ -25,16 +25,39 @@
             </div>
         </div>
     </nav>
-
-		<div class="result">
+    <div class="jumbotron hero">
+        <div class="result" style="text-align: center; font-family:Bebas; font-size: 40px; color: #ffffff; padding-top: 140px; padding-bottom: 140px">
             <h1 class="display-2">MLR-PRO</h1>
-			<h1 class="display-3" style="text-align: center; margin:15%; font-size: 25pt;" > {{ sonuc }}</h1>
+            <p class="display-3" style="font-family:Bebas Neue; font-type:normal;text-align: center; margin:15%; font-size: 25pt;" > {{ sonuc }}</p>
+            <div style="text-align: center;">
+        <table  style="width:100%;text-align: center;">
 
-		</div>
-	</div>
-    <div class="col-sm-6 social-icons" style="margin-bottom:0px;"><a href="https://github.com/MichaelMMeskhi/MLRP"><i class="fa fa-github"></i></a><a href="http://stackoverflow.com/users/5110035/michaelmmeskhi"><i class="fa fa-stack-overflow"></i></a><a href="mailto:acm.mlrp@gmail.com"><i class="fa fa-envelope"></i></a></div>
+          <tr>
+            <td><a href="http://udacity.com"><img style="width: 400px;" src="{{ url_for('static', filename='img/uda.png') }}"></a></td>
+            <td><a href="http://hackerrank.com"><img style="width: 400px;" src="{{ url_for('static', filename='img/hac.png') }}"></a></td>
 
+          </tr>
+          <tr>
+            <td><a href="http://www.coursera.org"><img style="width: 400px;" src="{{ url_for('static', filename='img/cou.png') }}"></a></td>
+            <td><a href="http://edx.org"><img style="width: 400px;" src="{{ url_for('static', filename='img/edx.png') }}"></a></td>
 
+          </tr>
+
+        </table>
+    </div>
+        </div>
+
+    </div>
+
+   <footer class="site-footer" style="padding-top:-1px;margin-top:-33px;">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-6">
+                    <h5 style="font-family:Bebas;">® 2017 All rights reserved</h5></div>
+                <div class="col-sm-6 social-icons" style="margin-bottom:0px;"><a href="https://github.com/MichaelMMeskhi/MLRP"><i class="fa fa-github"></i></a><a href="mailto:acm.mlrp@gmail.com"><i class="fa fa-envelope"></i></a></div>
+            </div>
+        </div>
+    </footer>
 
     <script src="{{ url_for('static', filename='js/jquery.min.js') }}"></script>
     <script src="{{ url_for('static', filename='bootstrap/js/bootstrap.min.js') }}"></script>
