--- a/templates/index.html
+++ b/templates/index.html
@@ -8,8 +8,12 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap/css/bootstrap.min.css') }}">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,400italic">
     <link rel="stylesheet" href="{{ url_for('static', filename='fonts/font-awesome.min.css') }}">
+    <link rel="stylesheet" href="https://daneden.github.io/animate.css/animate.min.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/Pricing-Table-Style-01.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/Pricing-Table-Style-011.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/Pricing-Tables.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/Pricing-Tables1.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/user.css') }}">
-
 </head>
 
 <body style="background-color:rgb(51,51,51);">
