--- a/templates/result.html
+++ b/templates/result.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/Pricing-Tables.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/Pricing-Tables1.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/user.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/user2.css') }}">
 </head>
 
 <body style="background-color:rgb(51,51,51);">
