--- a/templates/result.html
+++ b/templates/result.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/Pricing-Tables.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/Pricing-Tables1.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/user.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/user2.css') }}">
 </head>
 
 <body style="background-color:rgb(51,51,51);">
@@ -39,8 +40,8 @@
 
     </div>
 
-    <div class="jumbotron hero" style="padding-left:25px;">
-        <section class="pricing-table" style="width:959px;padding-left:30px;">
+    <div class="jumbotron hero2">
+        <section class="pricing-table" style="width:%100px;padding:10px">
             <div class="row">
                 <div class="col-md-4 col-sm-4">
                     <div class="pricingTable purple">
