--- a/templates/result.html
+++ b/templates/result.html
@@ -40,7 +40,7 @@
 
     </div>
 
-    <div class="jumbotron hero2">
+    <div class="jumbotron hero2" style="margin-top: -30px">
         <section class="pricing-table" style="width:%100px;padding:10px">
             <div class="row">
                 <div class="col-md-4 col-sm-4">
