--- a/templates/result.html
+++ b/templates/result.html
@@ -46,7 +46,7 @@
                 <div class="col-md-4 col-sm-4">
                     <div class="pricingTable purple">
                         <div class="pricingTable-header">
-                            <h3>Udacity </h3><span style="padding-bottom:10px;">Learn only from the best</span><img src="{{ url_for('static', filename='img/udacity_share-46db4b8faf075a5af5a1070a7fa0ad3639783609ff45f447e4ea467fe3aa9d32.png') }}" style="width:270px;"></div>
+                            <h3>Udacity </h3><span style="padding-bottom:10px;">Learn only from the best</span><img src="{{ url_for('static', filename='img/udacity-logo.png') }}" style="width:50%;"></div>
                         <div class="pricing-plans"><span class="price-value"><span>Explore More</span></span>
                         </div>
                         <div class="pricingContent"></div>
@@ -56,7 +56,7 @@
                 <div class="col-md-4 col-sm-4">
                     <div class="pricingTable green">
                         <div class="pricingTable-header">
-                            <h3>HackerRank </h3><span style="padding-bottom:10px;">Practice your coding skills</span><img src="{{ url_for('static', filename='img/hackerrank-logo.jpg') }}" style="width:270px;"></div>
+                            <h3>HackerRank </h3><span style="padding-bottom:10px;">Practice your coding skills</span><img src="{{ url_for('static', filename='img/hackerrank-logo.png') }}" style="width:47%;"></div>
                         <div class="pricing-plans"><span class="price-value"><span>Solve Problems</span></span></div>
                         <div class="pricingContent">
                             <ul></ul>
@@ -67,7 +67,7 @@
                 <div class="col-md-4 col-sm-4">
                     <div class="pricingTable yellow">
                         <div class="pricingTable-header">
-                            <h3>Stack Overflow </h3><span style="padding-bottom:10px;">Ask, answer, discuss</span><img src="{{ url_for('static', filename='img/so-logo.png') }}" style="width:270px;"></div>
+                            <h3>Stack Overflow </h3><span style="padding-bottom:10px;">Ask, answer, discuss</span><img src="{{ url_for('static', filename='img/so-logo.png') }}" style="width:50%;"></div>
                         <div class="pricing-plans"><span class="price-value"><span>Help out</span></span></div>
                         <div class="pricingContent"></div>
                         <div class="pricingTable-sign-up"><a href="http://stackoverflow.com" class="btn btn-block" style="background-color:#6d8de1;">Start Answering</a></div>
